--- a/django_cradmin/staticsources/django_cradmin/styles/basetheme/3__base/_fieldwrapper.scss
+++ b/django_cradmin/staticsources/django_cradmin/styles/basetheme/3__base/_fieldwrapper.scss
@@ -107,5 +107,6 @@ Styleguide form.7:fieldwrapper
 
 
 .fieldwrapper {
+    @extend %clearfix;
     margin-bottom: $vertical-rythm--spacing;
 }
